[gd_scene load_steps=12 format=4 uid="uid://hccjwm3hunth"]

[ext_resource type="Script" path="res://Scripts/Gameplay/hud.gd" id="1_1pmy2"]
[ext_resource type="FontFile" uid="uid://bigcuq3b6eifj" path="res://Demo/Fonts/HomeVideo-BLG6G.ttf" id="1_iend3"]
[ext_resource type="PackedScene" uid="uid://bjj5hw1d1pbl" path="res://Scenes/Objects/player.tscn" id="2_lwygx"]
[ext_resource type="Texture2D" uid="uid://cranidhnf6p04" path="res://Sprites/UI/grip_bar_back.png" id="3_0dmjy"]
[ext_resource type="Texture2D" uid="uid://dom0r6eod1jfi" path="res://Sprites/UI/grip_bar_front.png" id="3_ge2nw"]
[ext_resource type="Texture2D" uid="uid://dh8xoqndsykss" path="res://Sprites/Environment/Environment1.png" id="3_m7rpx"]
[ext_resource type="PackedScene" uid="uid://dbsrwca0u43j4" path="res://Demo/scenes/gun_pickup.tscn" id="4_nf66b"]
[ext_resource type="PackedScene" uid="uid://5go066ip627a" path="res://Demo/scenes/spike.tscn" id="5_cdke2"]
[ext_resource type="PackedScene" uid="uid://ramqgxs80twi" path="res://Scenes/world_borders.tscn" id="5_sde8d"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_lungt"]
resource_name = "ENV1"
texture = ExtResource("3_m7rpx")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:0/0 = 0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:1/0 = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:1/0 = 0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:2/0 = 0
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:2/0 = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:2/0 = 0
7:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, -8, 8, 8, -8, 8)
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, 8, -8, 8)
5:3/0 = 0
5:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, -8, 8, 8, -8, 8)
6:3/0 = 0
6:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, 8, -8, 8)
0:4/0 = 0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, 8, 0, 8, 8)
1:4/0 = 0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, -8, 0, 8, 8)
5:4/0 = 0
5:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, 8, 0, 8, 8)
6:4/0 = 0
6:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, -8, 0, 8, 8)
0:5/0 = 0
1:5/0 = 0
0:6/0 = 0
1:6/0 = 0
0:7/0 = 0
1:7/0 = 0

[sub_resource type="TileSet" id="TileSet_ejak1"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_lungt")

[node name="Houghton" type="Node2D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("1_1pmy2")
grip_colors = Array[Color]([Color(0.0235294, 0.501961, 0.317647, 1), Color(0.858824, 0.294118, 0.0862745, 1), Color(0.768627, 0.0470588, 0.180392, 1)])

[node name="AmmoCounter" type="Label" parent="CanvasLayer"]
visible = false
offset_left = 10.0
offset_top = 10.0
offset_right = 130.0
offset_bottom = 46.0
theme_override_fonts/font = ExtResource("1_iend3")
theme_override_font_sizes/font_size = 40
text = "15/15"

[node name="GripBar" type="TextureRect" parent="CanvasLayer"]
visible = false
offset_left = 10.0
offset_top = 60.0
offset_right = 138.0
offset_bottom = 100.0
texture = ExtResource("3_0dmjy")

[node name="Fill" type="ColorRect" parent="CanvasLayer/GripBar"]
layout_mode = 0
offset_right = 128.0
offset_bottom = 40.0
pivot_offset = Vector2(128, 0)
color = Color(0.0235294, 0.501961, 0.317647, 1)

[node name="Front" type="TextureRect" parent="CanvasLayer/GripBar"]
offset_right = 128.0
offset_bottom = 40.0
texture = ExtResource("3_ge2nw")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
position = Vector2(-224, 0)
tile_map_data = PackedByteArray("AAD//wEAAAABAAAAAAAAAAEAAAABAAAAAAABAAEAAAABAAEAAAD+/wEAAAABAAAAAAD9/wEAAAAAAAAAAAACAAEAAAABAAEAAAD9/wIAAAAAAAEAAAD9/wMAAAAAAAIAAAD+/wIAAAABAAEAAAD+/wMAAAABAAIAAAD//wIAAAABAAEAAAD//wMAAAABAAIAAAAAAAIAAAABAAEAAAAAAAMAAAABAAIAAAABAAIAAAABAAEAAAABAAMAAAABAAIAAAACAAIAAAABAAEAAAACAAMAAAABAAIAAAABAAAAAAAAAAQAAAACAAAAAAABAAQAAAADAAEAAAABAAAAAAADAAIAAAABAAEAAAADAAMAAAABAAIAAAAEAAEAAAABAAAAAAAEAAIAAAABAAEAAAAEAAMAAAABAAIAAAAFAAEAAAABAAAAAAAFAAIAAAABAAEAAAAFAAMAAAABAAIAAAAGAAAAAAAAAAMAAAAHAAAAAAABAAMAAAAGAAIAAAABAAEAAAAGAAMAAAABAAIAAAAHAAIAAAABAAEAAAAHAAMAAAABAAIAAAAGAAEAAAABAAEAAAAHAAEAAAABAAEAAAAIAAEAAAACAAAAAAAIAAIAAAACAAEAAAAIAAMAAAACAAIAAAAJAAEAAAAFAAAAAAAJAAIAAAAFAAEAAAAJAAMAAAAFAAEAAAAJAAQAAAAFAAIAAAAKAAIAAAAGAAEAAAAKAAMAAAAGAAEAAAAKAAEAAAAGAAMAAAALAAIAAAAGAAMAAAALAAMAAAAGAAEAAAAMAAMAAAAGAAMAAAANAAQAAAAGAAMAAAALAAQAAAAGAAIAAAAMAAQAAAAGAAIAAAAKAAQAAAAGAAIAAAAOAAUAAAABAAAAAAAOAAYAAAABAAEAAAAOAAcAAAABAAIAAAAPAAUAAAABAAAAAAAPAAYAAAABAAEAAAAPAAcAAAABAAIAAAAQAAUAAAACAAAAAAAQAAYAAAACAAEAAAAQAAcAAAACAAIAAAANAAUAAAABAAAAAAANAAYAAAABAAEAAAANAAcAAAABAAIAAAAMAAUAAAABAAAAAAAMAAYAAAABAAEAAAAMAAcAAAABAAIAAAALAAUAAAABAAAAAAALAAYAAAABAAEAAAALAAcAAAABAAIAAAAKAAUAAAABAAAAAAAKAAYAAAABAAEAAAAKAAcAAAABAAIAAAAJAAUAAAAAAAAAAAAJAAYAAAAAAAEAAAAJAAcAAAAAAAIAAAD9//7/AAAAAAUAAAD9////AAAAAAYAAAD9/wAAAAAAAAcAAAD+//7/AAABAAUAAAD+////AAABAAYAAAD+/wAAAAABAAcAAAADAAAAAAADAAAAAAAEAAAAAAADAAAAAAAFAAAAAAADAAAAAAAOAAQAAAADAAAAAAAPAAQAAAADAAIAAAAQAAQAAAADAAEAAAAAAAAAAAADAAEAAAD//wAAAAADAAEAAAASAAEAAAAFAAAAAAASAAIAAAAFAAEAAAASAAMAAAAFAAEAAAATAAEAAAAHAAAAAAATAAIAAAAHAAEAAAATAAMAAAAHAAEAAAARAAUAAAAFAAAAAAASAAUAAAAGAAIAAAATAAUAAAAGAAIAAAASAAQAAAAFAAEAAAATAAQAAAAHAAEAAAAUAAUAAAAGAAIAAAAVAAUAAAAGAAIAAAAWAAUAAAAGAAIAAAAXAAIAAAAFAAEAAAAXAAMAAAAFAAEAAAAXAAQAAAAFAAEAAAAXAAEAAAAFAAEAAAAYAAIAAAAHAAEAAAAYAAMAAAAHAAEAAAAYAAQAAAAHAAEAAAAYAAUAAAAHAAIAAAAYAAEAAAAHAAAAAAAXAAUAAAAGAAEAAAAXAAAAAAAFAAEAAAAXAP//AAAFAAEAAAAXAP7/AAAFAAEAAAA=")
tile_set = SubResource("TileSet_ejak1")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-13, 2)
zoom = Vector2(2.015, 2.015)

[node name="Player" parent="." instance=ExtResource("2_lwygx")]
position = Vector2(-232, 8)
impulsive_walljumps = true

[node name="Gun Pickup" parent="." instance=ExtResource("4_nf66b")]
position = Vector2(-221, -16)

[node name="World Borders" parent="." instance=ExtResource("5_sde8d")]
position = Vector2(0, 8)

[node name="North Border" parent="World Borders" index="0"]
position = Vector2(0, -255)

[node name="West Border" parent="World Borders" index="1"]
position = Vector2(-449, 64)

[node name="East Border" parent="World Borders" index="2"]
position = Vector2(433, 64)

[node name="South Border" parent="World Borders" index="3"]
position = Vector2(0, 232)

[node name="Spike" parent="." instance=ExtResource("5_cdke2")]
position = Vector2(-136, 8)

[connection signal="ready" from="CanvasLayer" to="CanvasLayer" method="_on_ready"]

[editable path="World Borders"]
